Use react 18's createRoot api

--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -5,8 +5,9 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "desk": "electron .",
-    "web": "webpack serve"
+    "desktop": "electron .",
+    "web": "webpack serve",
+    "build-dev": "webpack"
   },
   "author": "",
   "license": "ISC",
