ESlint force double quotes

--- a/GAT-desktop/.eslintrc.json
+++ b/GAT-desktop/.eslintrc.json
@@ -13,9 +13,6 @@
     },
     "rules": {
         "indent": ["error", 4],
-        "quotes": ["error", "double"],
-        "import/extensions": 0,
-        "no-restricted-syntax":"off",
-        "no-await-in-loop":"off"
+        "quotes": ["error", "double"]
     }
 }
