--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-react": "^7.29.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   }
 }
