--- a/GAT-desktop/.eslintrc.json
+++ b/GAT-desktop/.eslintrc.json
@@ -13,6 +13,8 @@
     },
     "rules": {
         "indent": ["error", 4],
+        "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "quotes": ["error", "double"]
     }
 }
