--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "desktop": "electron .",
-    "web": "webpack serve",
-    "build-dev": "webpack",
+    "web": "webpack serve --mode=development",
+    "build-dev": "webpack --mode=development",
     "lint": "eslint ./src",
     "lint-fix": "eslint ./src --fix"
   },
@@ -18,12 +18,16 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@types/electron": "^1.6.10",
+    "autoprefixer": "^10.4.5",
     "babel-loader": "^8.2.5",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.7.1",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "tailwindcss": "^3.0.24",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
