--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -38,6 +38,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-react": "^7.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
