--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -33,6 +33,9 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.23.0",
+    "@azure/msal-react": "^1.3.2",
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "electron": "^18.0.4",
     "eslint": "^8.4.0",
     "eslint-config-airbnb": "^19.0.4",
