--- a/GAT-desktop/.eslintrc.json
+++ b/GAT-desktop/.eslintrc.json
@@ -20,6 +20,7 @@
         "indent": ["error", 4],
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": ["error", 4],
-        "quotes": ["error", "double"]
+        "quotes": ["error", "double"],
+        "react/prop-types": 0
     }
 }
