--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -35,6 +35,9 @@
   "dependencies": {
     "@azure/msal-browser": "^2.23.0",
     "@azure/msal-react": "^1.3.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@microsoft/microsoft-graph-client": "^3.0.2",
     "electron": "^18.0.4",
     "eslint": "^8.4.0",
