--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@microsoft/microsoft-graph-client": "^3.0.2",
+    "dotenv": "^16.0.1",
     "electron": "^18.0.4",
     "eslint": "^8.4.0",
     "eslint-config-airbnb": "^19.0.4",
