--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -4,7 +4,7 @@
   "description": "Electron desktop app for the GAT application",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "desktop": "electron .",
     "web": "webpack serve --mode=development",
     "build-dev": "webpack --mode=development",
@@ -14,19 +14,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.18.2",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^13.3.0",
     "@types/electron": "^1.6.10",
     "autoprefixer": "^10.4.5",
+    "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.7.1",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
+    "react-test-renderer": "^18.1.0",
     "tailwindcss": "^3.0.24",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
