--- a/GAT-desktop/package.json
+++ b/GAT-desktop/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "jest",
     "desktop": "electron .",
-    "web": "webpack serve --mode=development",
-    "build-dev": "webpack --mode=development",
+    "web": "cross-env TARGET=web webpack serve --mode=development",
+    "build-desktop": "cross-env TARGET=desktop webpack --mode=development",
     "lint": "eslint ./src",
     "lint-fix": "eslint ./src --fix"
   },
@@ -49,7 +49,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@microsoft/microsoft-graph-client": "^3.0.2",
-    "dotenv": "^16.0.1",
+    "cross-env": "^7.0.3",
     "electron": "^18.0.4",
     "eslint": "^8.4.0",
     "eslint-config-airbnb": "^19.0.4",
