change connection string

--- a/GatApi/GatApi/appsettings.json
+++ b/GatApi/GatApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GatApiContext": "Data Source=gatjndata.database.windows.net;Initial Catalog=GAT-DB;Persist Security Info=True; User Id=saadmin; Password=keakea123!"
+    "GatApiContext": "Data Source=gatjndata.database.windows.net;Initial Catalog=GAT-DB;Persist Security Info=True; User Id=shared_user; Password=KeaKea123"
   }
 }
